# bubble-sheet-auto-mark

./: .gitignore  LICENSE  PRIVACY.md  README.md  SECURITY.md  buildozer.spec  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: dependabot.yml
.github/workflows/: build-android.yml  build-ios.yml  pages.yml  test.yml
docs/: Gemfile  _config.yml  configuration.md  index.html  index.md  installation.md  usage.md
docs/app/: index.html
docs/docs/: configuration.md  index.md  installation.md  usage.md
src/bubble_mark/: __init__.py  __main__.py  updater.py
src/bubble_mark/export/: __init__.py  csv_exporter.py
src/bubble_mark/models/: __init__.py  answer_key.py  grade_result.py  settings.py
src/bubble_mark/processing/: __init__.py  analyzer.py  color_channel.py  detector.py  distortion.py  grader.py  grid_detection.py  image_utils.py
src/bubble_mark/ui/: __init__.py  app.py  camerax_bridge.py  log_handler.py  status_bar.py
src/bubble_mark/ui/kv/: camera.kv  home.kv  results.kv  settings.kv
src/bubble_mark/ui/screens/: __init__.py  camera_screen.py  home_screen.py  reference_setup_screen.py  results_screen.py  settings_screen.py
tests/: conftest.py  test_analyzer.py  test_answer_key.py  test_color_channel.py  test_csv_exporter.py  test_detector.py  test_distortion.py  test_grade_result.py  test_grader.py  test_grid_detection.py  test_image_utils.py  test_settings.py  test_updater.py
