[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bubble-sheet-auto-mark"
version = "0.1.0"
description = "Cross-platform bubble sheet auto-marking application"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "Pillow>=10.0",
]

[project.scripts]
bubble-mark = "bubble_mark.ui.app:main"

[project.optional-dependencies]
toga = [
    "toga>=0.4",
]
dev = [
    "briefcase>=0.3",
    "opencv-python-headless>=4.8",
    "pytest>=8.0",
    "pytest-cov>=4.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.briefcase]
project_name = "Bubble Sheet Auto-Mark"
bundle = "com.wdconinc"
version = "0.1.0"
url = "https://github.com/wdconinc/bubble-sheet-auto-mark"
license.file = "LICENSE"

[tool.briefcase.app.bubble-mark]
formal_name = "Bubble Sheet Auto-Mark"
description = "Cross-platform bubble sheet auto-marking application"
sources = ["src/bubble_mark"]
requires = [
    "numpy>=1.26",
    "Pillow>=10.0",
]

[tool.briefcase.app.bubble-mark.linux]
requires = [
    "toga>=0.4",
    "opencv-python-headless>=4.8",
]

[tool.briefcase.app.bubble-mark.macOS]
requires = [
    "toga>=0.4",
    "opencv-python-headless>=4.8",
]

[tool.briefcase.app.bubble-mark.windows]
requires = [
    "toga>=0.4",
    "opencv-python-headless>=4.8",
]

[tool.briefcase.app.bubble-mark.android]
requires = [
    "toga-android>=0.4",
    "Pillow>=10.0",
    "numpy>=1.26",
    # opencv-python-headless is not available via Chaquopy (Briefcase's Android
    # pip server). The contour overlay is silently skipped and grading falls back
    # to "Image processing is not available on this platform." until a compatible
    # Android wheel is published. Track: https://github.com/chaquo/chaquopy/issues
]
gradle_extra_content = """
dependencies {
    implementation 'androidx.camera:camera-camera2:1.3.4'
    implementation 'androidx.camera:camera-lifecycle:1.3.4'
}
"""

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
